--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@apollo/server": "^4.7.1",
+    "@omniauthor/shared": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "express-rate-limit": "^7.5.1"
+    "express-rate-limit": "^7.5.1",
+    "mongoose": "^7.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.3",
     "@types/jest": "^29.5.0",
+    "@types/supertest": "^2.0.12",
+    "bcrypt": "^5.1.0",
     "jest": "^29.6.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.8",
