--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,10 @@
     "recharts": "^2.8.0"
   },
   "devDependencies": {
+    "@omniauthor/shared": "^1.0.0",
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.0",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.0",
     "@types/react": "^18.2.0",
@@ -38,7 +42,10 @@
     "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.0",
+    "jest-environment-jsdom": "^29.6.0",
+    "jest-transform-stub": "^2.0.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.0",
