--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,7 +21,11 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.3",
     "@types/jest": "^29.5.0",
+    "@types/supertest": "^2.0.12",
+    "bcrypt": "^5.1.0",
+    "@types/bcrypt": "^5.0.0",
     "jest": "^29.6.0",
+    "supertest": "^6.3.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.8",
