--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,9 +31,10 @@
     "openai": "^4.24.1",
     "apollo-server-express": "^3.12.1",
     "graphql-subscriptions": "^2.0.0",
-    "@coinbase/coinbase-commerce-node": "^1.0.4",
+    "coinbase-commerce-node": "^1.0.4",
     "@coinbase/onchainkit": "^0.29.3",
-    "@coinbase/agentkit-core": "^0.0.4",
+    "@coinbase/agentkit": "^0.8.2",
+    "@coinbase/cdp-sdk": "^1.18.0",
     "viem": "^2.7.3",
     "wagmi": "^2.5.7"
   },
